fix: fix text align

--- a/src/styles/components/_examples.scss
+++ b/src/styles/components/_examples.scss
@@ -44,7 +44,12 @@
     }
 
     &__h2 {
+        text-align: center;
         margin-bottom: var(--margin);
+
+        @include mixins.respond-to(mobile) {
+            text-align: left;
+        }
     }
 
     &__p {
@@ -57,7 +62,6 @@
 
         @include mixins.respond-to(mobile) {
             width: 100%;
-
             margin-left: 0;
         }
     }
